--- a/Views/TableDrawableView.xaml
+++ b/Views/TableDrawableView.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView 
+    x:Class="JHLabel.Views.TableDrawableView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="JHLabel.Views.TableDrawableView">
-    <GraphicsView x:Name="graphicsView" PaintSurface="OnPaintSurface" />
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+  <GraphicsView x:Name="graphicsView"/>
 </ContentView>
