--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -7,12 +7,12 @@
     xmlns:models="clr-namespace:JHLabel.Models"
     Title="JHLabel">
   <Grid ColumnDefinitions="*,2*">
- <!-- 좌측 영역 -->
-  <Grid Grid.Column="0">
-    <Grid.RowDefinitions>
-      <RowDefinition Height="*" />   <!-- 라벨 목록: 가변 높이 -->
-      <RowDefinition Height="Auto" /> <!-- 버튼 영역: 필요한 만큼만 -->
-    </Grid.RowDefinitions>
+    <!-- 좌측 영역: 배경을 흰색으로 설정 -->
+    <Grid Grid.Column="0" BackgroundColor="White">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*" />   <!-- 라벨 목록: 가변 높이 -->
+        <RowDefinition Height="Auto" /> <!-- 버튼 영역: 필요한 만큼만 -->
+      </Grid.RowDefinitions>
 
     <!-- 라벨 목록 스크롤뷰 -->
     <ScrollView Grid.Row="0">
@@ -43,7 +43,9 @@
     </StackLayout>
   </Grid>
 
-    <!-- 우측: 라벨 편집 영역 -->
-    <AbsoluteLayout x:Name="EditorArea" Grid.Column="1" BackgroundColor="White"/>
+    <!-- 우측: 라벨 편집 영역을 ScrollView로 감싸 스크롤 가능하도록 함 -->
+    <ScrollView Grid.Column="1">
+      <AbsoluteLayout x:Name="EditorArea" BackgroundColor="White"/>
+    </ScrollView>
   </Grid>
 </ContentPage>
